--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "fs-extra": "^7.0.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "rotating-file-stream": "^1.4.0"
   }
 }
