--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fs-extra": "^7.0.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
     "rotating-file-stream": "^1.4.0"
   }
