--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
+    "papercss": "^1.6.1",
     "rotating-file-stream": "^1.4.0"
   }
 }
