--- a/users/package.json
+++ b/users/package.json
@@ -7,5 +7,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "debug": "^4.1.1",
+    "fs-extra": "^7.0.1",
+    "js-yaml": "^3.12.2",
+    "restify": "^8.1.0",
+    "restify-clients": "^2.6.4",
+    "sequelize": "^4.43.0",
+    "sqlite": "^3.0.2"
+  }
 }
