--- a/users/package.json
+++ b/users/package.json
@@ -2,8 +2,9 @@
   "name": "user-auth-server",
   "version": "1.0.0",
   "description": "user auth microservice",
-  "main": "index.js",
+  "main": "user-server.mjs",
   "scripts": {
+    "start": "DEBUG=users:* PORT=3333 SEQUELIZE_CONNECT=sequelize-sqlite.yaml node --experimental-modules user-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
