--- a/diary/package.json
+++ b/diary/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
     "papercss": "^1.6.1",
-    "rotating-file-stream": "^1.4.0"
+    "rotating-file-stream": "^1.4.0",
+    "superagent": "^4.1.0"
   }
 }
