--- a/diary/package.json
+++ b/diary/package.json
@@ -10,13 +10,17 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "fs-extra": "^7.0.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
     "papercss": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "rotating-file-stream": "^1.4.0",
+    "session-file-store": "^1.2.0",
     "superagent": "^4.1.0"
   }
 }
