--- a/diary/package.json
+++ b/diary/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
     "start-memory": "DEBUG=diary:* ENTRIES_MODEL=memory node --experimental-modules ./bin/www.mjs",
     "start-mongo": "DEBUG=diary:* MONGO_URL=mongodb://localhost/ MONGO_DBNAME=diary ENTRIES_MODEL=mongodb node --experimental-modules ./bin/www.mjs"
   },
