--- a/users/package.json
+++ b/users/package.json
@@ -5,7 +5,9 @@
   "main": "user-server.mjs",
   "scripts": {
     "start": "DEBUG=users:* PORT=3333 SEQUELIZE_CONNECT=sequelize-sqlite.yaml node --experimental-modules user-server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "docker": "node --experimental-modules ./user-server",
+    "docker-build": "docker build -t node-web-development/userauth ."
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +15,8 @@
     "debug": "^4.1.1",
     "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.2",
+    "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "restify": "^8.1.0",
     "restify-clients": "^2.6.4",
     "sequelize": "^4.43.0",
