--- a/diary/package.json
+++ b/diary/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
     "start-memory": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
-    "start-mongo": "DEBUG=diary:* MONGO_URL=mongodb://localhost/ MONGO_DBNAME=diary ENTRIES_MODEL=mongodb USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs"
+    "start-mongo": "DEBUG=diary:* MONGO_URL=mongodb://localhost/ MONGO_DBNAME=diary ENTRIES_MODEL=mongodb USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
+    "start-sequelize": "SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml ENTRIES_MODEL=sequelize node --experimental-modules ./bin/www.mjs"
+  
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -15,12 +17,15 @@
     "fs-extra": "^7.0.1",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "js-yaml": "^3.12.2",
     "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
+    "mysql": "^2.16.0",
     "papercss": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^1.4.0",
+    "sequelize": "^4.43.0",
     "session-file-store": "^1.2.0",
     "superagent": "^4.1.0"
   }
