--- a/diary/package.json
+++ b/diary/package.json
@@ -22,6 +22,7 @@
     "mongodb": "^3.1.13",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
+    "mysql2": "^1.6.5",
     "papercss": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
