--- a/diary/package.json
+++ b/diary/package.json
@@ -19,6 +19,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "js-yaml": "^3.13.0",
+    "moment": "^2.24.0",
     "mongoose": "^5.4.21",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
