--- a/diary/package.json
+++ b/diary/package.json
@@ -3,11 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
-    "nodemon": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 nodemon --experimental-modules ./bin/www.mjs",
-    "start-memory": "DEBUG=diary:* ENTRIES_MODEL=memory USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
-    "start-mongo": "DEBUG=diary:* MONGO_URL=mongodb://localhost/ MONGO_DBNAME=diary ENTRIES_MODEL=mongodb USER_SERVICE_URL=http://localhost:3333 node --experimental-modules ./bin/www.mjs",
-    "start-sequelize": "SEQUELIZE_CONNECT=models/sequelize-sqlite.yaml ENTRIES_MODEL=sequelize node --experimental-modules ./bin/www.mjs",
+    "start": "DEBUG=diary:* USER_SERVICE_URL=http://localhost:3333 MONGODB_URI=mongodb://localhost:27017/Diary node --experimental-modules ./bin/www.mjs",
+    "nodemon": "DEBUG=diary:* USER_SERVICE_URL=http://localhost:3333 MONGODB_URI=mongodb://localhost:27017/Diary nodemon --experimental-modules ./bin/www.mjs",
     "docker": "node --experimantal-modules ./app",
     "docker-build": "docker build -t node-web-development/diary ."
   },
@@ -17,21 +14,17 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "fs-extra": "^7.0.1",
-    "hbs": "~4.0.1",
+    "hbs": "^4.0.4",
     "http-errors": "~1.6.2",
-    "js-yaml": "^3.13.0",
+    "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.21",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0",
-    "mysql2": "^1.6.5",
     "papercss": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "rotating-file-stream": "^1.4.0",
-    "sequelize": "^4.43.0",
     "session-file-store": "^1.2.0",
-    "sqlite3": "^4.0.6",
     "superagent": "^4.1.0"
   },
   "devDependencies": {
