--- a/user-service/package.json
+++ b/user-service/package.json
@@ -4,7 +4,8 @@
   "description": "user auth microservice",
   "main": "src/server.mjs",
   "scripts": {
-    "start": "DEBUG=users:* NODE_ENV=dev node --experimental-modules --es-module-specifier-resolution=node src/server",
+    "start": "node --experimental-modules src/server",
+    "dev": "DEBUG=users:* NODE_ENV=dev node --experimental-modules --es-module-specifier-resolution=node src/server",
     "test": "npm run clean & NODE_ENV=test mocha test/*.spec.js --exit",
     "clean": "rimraf ./data/users-sequelize.sqlite3",
     "sqlite3": "sqlite3 ./data/users-sequelize-test.sqlite3"
@@ -23,8 +24,7 @@
     "restify-errors": "^8.0.0",
     "rimraf": "^2.6.3",
     "sequelize": "^4.43.0",
-    "sqlite3": "^4.0.8",
-    "swagger-ui-restify": "^3.0.8"
+    "sqlite3": "^4.0.8"
   },
   "devDependencies": {
     "@std/esm": "^0.26.0",
