--- a/user-service/package.json
+++ b/user-service/package.json
@@ -7,7 +7,7 @@
     "start": "node --experimental-modules src/server",
     "dev": "DEBUG=users:* NODE_ENV=dev node --experimental-modules --es-module-specifier-resolution=node src/server",
     "test": "npm run clean & NODE_ENV=test mocha test/*.spec.js --exit",
-    "clean": "rimraf ./data/users-sequelize.sqlite3",
+    "clean": "rimraf ./data/users-sequelize-test.sqlite3",
     "sqlite3": "sqlite3 ./data/users-sequelize-test.sqlite3"
   },
   "author": "",
