--- a/diary/package.json
+++ b/diary/package.json
@@ -1,33 +1,30 @@
 {
   "name": "diary",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "start": "DEBUG=diary:* USER_SERVICE_URL=http://localhost:3333 MONGODB_URI=mongodb://localhost:27017/Diary node --experimental-modules ./bin/www.mjs",
-    "nodemon": "DEBUG=diary:* USER_SERVICE_URL=http://localhost:3333 MONGODB_URI=mongodb://localhost:27017/Diary nodemon --experimental-modules ./bin/www.mjs",
-    "docker": "node --experimantal-modules ./app",
-    "docker-build": "docker build -t node-web-development/diary ."
+    "start": "node --experimental-modules ./bin/www.mjs",
+    "dev": "DEBUG=diary:* NODE_ENV=dev node --experimental-modules --es-module-specifier-resolution=node ./bin/www.mjs",
+    "test": "DEBUG=diary:* NODE_ENV=test mocha test/*.js --exit"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^8.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
-    "fs-extra": "^7.0.1",
     "hbs": "^4.0.4",
     "http-errors": "~1.6.2",
-    "js-yaml": "^3.13.1",
     "moment": "^2.24.0",
     "mongoose": "^5.4.21",
-    "morgan": "~1.9.0",
     "papercss": "^1.6.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "rotating-file-stream": "^1.4.0",
     "session-file-store": "^1.2.0",
     "superagent": "^4.1.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.10"
+    "@std/esm": "^0.26.0",
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4"
   }
 }
